kustomize/base-sts/statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: statefulset
spec:
  selector:
    matchLabels:
      app: statefulset
  podManagementPolicy: OrderedReady
  replicas: 1
  serviceName: statefulset-hz
  template:
    metadata:
      name: statefulset
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: default-container
        image: default-container
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c" , "sleep 5"]
        ports:
        - name: hazelcast
          containerPort: 5701
        - name: app
          containerPort: 8080
          protocol: TCP
        - name: mgmnt
          containerPort: 8081
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8081
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
