kustomize/base-sts/route-api.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route-api
spec:
  to:
    kind: Service
    name: service-api
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
